--- a/cabinet_medicus/src/application/application.css
+++ b/cabinet_medicus/src/application/application.css
@@ -9,3 +9,10 @@
 	-fx-max-width:500;
 	
 }
+
+.atcd-add-button
+{
+	-fx-alignment: center-right ;
+	-fx-padding: 5;
+	-fx-background-color: rgb(128,128,255);
+}
